Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* htsearch/htsearch.cc: Fixed setupWords loop for junk at end of query
	
Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* htsearch/Display.cc: Set CONFIG template variable to the base name
	  of the config file (no directory or .conf), as expected by  htsearch

Mon Jun 9 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* test/test_functions.in: avoid trying killing apache multiple times

	* configure,configure.in: Reformat --help  output
	* htdoc/FAQ.html: Brought up-to-date with main docs
	* htdoc/hts_templates.html: added hyperlinks.
	* installdir/search.html: Display version

Sun Jun 8 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* configure:  Hack to set --disable-bigfile for Solaris (with Sun cc)
	  and  --disable-shared --enable-static  for Mac OS X

	* test/{test_functions.in,t_htdig,t_htdig_local,t_htnet}:
	  Only start Apache for tests which need it, and kill it after the test

	* contrib/parse_doc.pl: Allow file names containing spaces (from .deb)

Mon Jun 2 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/mp_cmpr.c: Add default zlib setting to  default_cmpr_info
	* htcommon/defaults.cc, htword/WordDBCompress.cc: Fix docs to say
	  default compression by 8 (not by 3, which I had "fixed" it to...)

	* htcommon/conf_lexer.{cxx,lxx}: Avoid warnings, and document hack.

Thu May 29 2003 Lachlan Andrew  <lha@users.sourceforge.net>
	
	* db/mp_cmpr.c: Fix comparison of -1 and unsigned which broke SunOS cc
	* htdoc/install.html: Warn SunOS cc users to --disable-bigfile

	* htcommon/conf_lexer.cxx: Suppress warnings of unused identifiers
	* test/con/htdig.conf2.in: Disable testing of content_classifier
	  attribute, as didn't work until after installation

Tue May 27 2003 Lachlan Andrew  <lha@users.sourceforge.net>

	* db/configure, db/ac{local,include}.m4:
	  Stop test for zlib from adding -I/default/path (*this* time...)
