@@ -54,6 +54,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#config">config</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#config_dir">config_dir</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#content_classifier">content_classifier</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#cookies_input_file">cookies_input_file</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#create_image_list">create_image_list</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#create_url_list">create_url_list</a><br>
 	</font> <br>
@@ -221,6 +222,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#text_factor">text_factor</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#timeout">timeout</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#title_factor">title_factor</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#translate_latin1">translate_latin1</a><br>
 	</font> <br>
 	<strong>U</strong> <font face="helvetica,arial" size="2"><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_list">url_list</a><br>
@@ -242,6 +244,7 @@
 	<strong>W</strong> <font face="helvetica,arial" size="2"><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#word_db">word_db</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#word_dump">word_dump</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#wordlist_cache_dirty_level">wordlist_cache_dirty_level</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#wordlist_cache_size">wordlist_cache_size</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#wordlist_compress">wordlist_compress</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#wordlist_compress_zlib">wordlist_compress_zlib</a><br>
