@@ -55,6 +55,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#check_unique_md5">check_unique_md5</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#compression_level">compression_level</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#content_classifier">content_classifier</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#cookies_input_file">cookies_input_file</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#create_image_list">create_image_list</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#create_url_list">create_url_list</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#disable_cookies">disable_cookies</a><br>
@@ -105,6 +106,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#tcp_max_retries">tcp_max_retries</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#tcp_wait_time">tcp_wait_time</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#timeout">timeout</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#translate_latin1">translate_latin1</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_list">url_list</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_log">url_log</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_rewrite_rules">url_rewrite_rules</a><br>
@@ -113,6 +115,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#valid_extensions">valid_extensions</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#valid_punctuation">valid_punctuation</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#word_dump">word_dump</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#wordlist_cache_dirty_level">wordlist_cache_dirty_level</a><br>
 	<br><strong><a href="htdump.html" target="body">htdump</a></strong> <font face="helvetica,arial" size="2"><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#doc_list">doc_list</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#word_dump">word_dump</a><br>
@@ -235,6 +238,7 @@
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#template_patterns">template_patterns</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#text_factor">text_factor</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#title_factor">title_factor</a><br>
+	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#translate_latin1">translate_latin1</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_seed_score">url_seed_score</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#url_text_factor">url_text_factor</a><br>
 	 <img src="dot.gif" alt="*" width=9 height=9> <a target="body" href="attrs.html#use_meta_description">use_meta_description</a><br>
